[gd_scene load_steps=4 format=1]

[ext_resource path="res://gem.gd" type="Script" id=1]
[ext_resource path="res://art/gemBlue.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 14.425, 10.3128 )

[node name="gem" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, -1000 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="collect_effect" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="appear_effect" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="appear_delay" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="area_enter" from="." to="." method="_on_gem_area_enter"]

[connection signal="tween_complete" from="collect_effect" to="." method="_on_collect_effect_tween_complete"]

[connection signal="timeout" from="appear_delay" to="." method="_on_appear_delay_timeout"]


